<resources>
    <string name="app_name">VkShopList</string>

    <!-- Strings related to login -->
    <integer name="com_vk_sdk_AppId">5665521</integer>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="my_friends">Мои Друзья</string>
    <string name="inbox_lists">Входящие Списки</string>
    <string name="my_lists">Исходящие Списки</string>
    <string name="my_friends_online">Онлайн</string>
    <string name="samples">Черновики</string>
    <string name="others">Другое</string>
    <string name="about">О нас</string>
    <string name="logout">Выйти</string>

    <string name="auth_error">Ошибка авторизации</string>
    <string name="auth_success">Поздравляем вы успешно авторизованы</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="what_to_buy">Что купить?</string>
    <string name="how_many_to_buy">Сколько купить?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="fields_empty">Не все поля формы заполнены</string>
    <string name="title_shoplist">Название списка</string>
    <string name="blank">Пустой Список</string>
    <string name="send_button">Отправить</string>
    <string name="find_friend">Найти Друга</string>
    <string name="list_empty">Список пуст, отправлять нечего!</string>
    <string name="internet_access_error">Ошибка подключения к интернет, пожалуйста, попробуйте ещё раз отправить</string>
    <string name="send_success">Список успешно отправлен!</string>


</resources>
