<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:title="@string/my_friends"/>
        <item
            android:id="@+id/nav_list_in"
            android:title="@string/inbox_lists" />
        <item
            android:id="@+id/nav_list_out"
            android:title="@string/my_lists" />
        <item
            android:id="@+id/nav_draft"
            android:title="@string/samples" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_go_out"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
